# food_order_system

./: .flake8  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
food_order_system/: __init__.py  __main__.py  conftest.py  settings.py
food_order_system/db/: base.py  utils.py
food_order_system/db/models/: __init__.py
food_order_system/domain/food_category/: food_category.py
food_order_system/domain/food_item/: food_item.py
food_order_system/domain/user/: user.py  user_exception.py
food_order_system/exception/: base_exception.py  base_exception_handler.py
food_order_system/infra/: __init__.py
food_order_system/infra/db/: __init__.py  base.py
food_order_system/infra/db/migrations/: env.py
food_order_system/infra/db/migrations/versions/: 2023-07-02-01-07_001_init_user.py  2023-07-24-21-13_002_food_category.py
food_order_system/infra/db/model/: __init__.py  food_category_dto.py  food_item_dto.py  user_dto.py
food_order_system/infra/db/repository/: base.py  food_category.py  food_item.py  user.py
food_order_system/infra/rabbit/: lifetime.py
food_order_system/services/: __init__.py
food_order_system/tests/: __init__.py
food_order_system/usecase/food_category/: food_category_command_model.py  food_category_command_service.py  food_category_query_model.py  food_category_query_service.py
food_order_system/usecase/food_item/: food_item_command_model.py  food_item_command_service.py  food_item_query_model.py  food_item_query_service.py
food_order_system/usecase/user/: user_command_model.py  user_command_service.py  user_query_model.py  user_query_service.py
food_order_system/web/: __init__.py  application.py  lifetime.py
food_order_system/web/api/: __init__.py  router.py
food_order_system/web/api/monitoring/: __init__.py
food_order_system/web/api/routes/: food_category.py  food_item.py  monitoring.py  user.py
